# lofar-masters-demo

./: .gitignore  MSc_student_intro_2025-2026.ipynb  README.md  make_euclid_cutouts.py  notes.md  pyproject.toml  stilts_matching.sh  week1_cutouts.py  week1_spectral_index.py  week2_cutouts.py  week2_source_fitting.py  week3_overlays.py
