[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.0",
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ty>=0.0.1a23",
]


[tool.ty.rules]
unresolved-attribute = "ignore"


